se agrega documentacion de la API en el .md se agregan archivos .svg se creo profile/api-token.blade.php
